<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Auxilio Emergencial</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="cpf">CPF</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="solicitar_auxilio">Insira suas informações para realizar a solicitação do seu auxilio</string>
    <string name="renda_mensal">Renda mensal</string>
    <string name="solicitar">Solicitar</string>
</resources>