<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="#7159c1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/icon"
            tools:layout_centerHorizontal="true" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvSolicitar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/solicitar_auxilio"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSolicitar"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cpf"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edCPF"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tvCPF"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="number"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp" />

    <TextView
        android:id="@+id/tvDataNasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edCPF"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/data_de_nascimento"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edDataNasc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tvDataNasc"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="date"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp" />

    <TextView
        android:id="@+id/tvRenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edDataNasc"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/renda_mensal"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edRenda"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tvRenda"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edRenda"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="64dp"
        android:background="#7159c1"
        android:onClick="btnSolcitarOnClick"
        android:text="@string/solicitar"
        android:textColor="#fff" />


</RelativeLayout>